--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@nextui-org/theme": "^2.2.5",
 		"@react-aria/ssr": "^3.9.2",
 		"@react-aria/visually-hidden": "^3.8.10",
+		"@sentry/nextjs": "^8.15.0",
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.2",
 		"@types/react-dom": "18.3.0",
