--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 		"@types/react-dom": "18.3.0",
 		"@typescript-eslint/eslint-plugin": "^7.10.0",
 		"@typescript-eslint/parser": "^7.10.0",
+		"@vercel/analytics": "^1.3.1",
+		"@vercel/speed-insights": "^1.0.12",
 		"autoprefixer": "10.4.19",
 		"axios": "^1.7.2",
 		"clsx": "^2.1.1",
